@@ -67,7 +67,7 @@ namespace Orthanc
 
     if (method != HttpMethod_Get)
     {
-      output.SendMethodNotAllowedError("GET");
+      output.SendMethodNotAllowed("GET");
       return true;
     }
 
